

--------------------------------------------------------------------------------
Fusion 1.210 - March 13th, 2004
--------------------------------------------------------------------------------
- 03-15-04: Fixed Abnormal HP & SP Natural Recovery Rate. [AlexKreuz]
- 03-15-04: Fixed incompatibility with FusionManager and Auto-Restart. [AlexKreuz]
- 03-14-04: Commented out debugout of Steal, too much server window flooding [Eliot]
- 03-13-04: Fixed bug regarding pets changing to other pets. [Colus]
- 03-13-04: Added EnablePetSkills option to attack skills. [Colus]
- 03-13-04: Added EnablePetSkills boolean option. [Colus]
- 03-13-04: Updated ME and Sanctuary (damage, duration). [Colus]
- 03-13-04: FusionSQL -> Fixed Guild Overwriting Bug. [AlexKreuz]
- 03-13-04: Added StealMultiplier (works as percentage, default 100). [Colus]
- 03-13-04: Removed saying of Cloaking! when you succeed at it.[Colus]
- 03-13-04: Corrected minor bug in view packets. [Colus]
- 03-13-04: Fixed Sniper skills to actually do damage. [Colus]
- 03-13-04: Added error messages and weapon parsing to Lord Knight skills. [Colus]
- 03-13-04: Removed #icon and #unicon commands for release. [Colus]
- 03-13-04: Cosmetic Changes. [AlexKreuz]
- 03-13-04: Removed Talkie Box server outputs. Less Lag. [AlexKreuz]
- 03-13-04: FusionSQL -> Fixed Double Logins Bug. [AlexKreuz]
- 03-13-04: Disabled Ghostring Card. Incorrect effects. [AlexKreuz]
- 03-12-04: Removed Stop Button. Only one button now. [AlexKreuz]
- 03-11-04: Updated duration/cast delay of ME. [Colus]
- 03-11-04: Updated option calls to use common function. [Colus]
- 03-11-04: Super Novices now can use carts. [Colus]
- 03-11-04: Updated Cart Boost with proper cart check. [Colus]
- 03-11-04: Updated Basilica to show proper effect. [Colus]
- 03-11-04: Updated packets for combo delay. [Colus]
- 03-11-04: Corrected combo delay periods. [Colus]
- 03-10-04: Fixed bug #594 (buying phantom items from NPC shops) [Colus]