@@ -3,6 +3,7 @@
 --------------------------------------------------------------------------------
 Fusion 1.210 - March 13th, 2004
 --------------------------------------------------------------------------------
+- 03-15-04: Fixed some damage calcs. [Ramza]
 - 03-15-04: Fixed Abnormal HP & SP Natural Recovery Rate. [AlexKreuz]
 - 03-15-04: Fixed incompatibility with FusionManager and Auto-Restart. [AlexKreuz]
 - 03-14-04: Commented out debugout of Steal, too much server window flooding [Eliot]
